<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Musical Structure</string>
    <string name="play_icon"> an icon to play music</string>
    <string name="songs">Songs</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="album_cover">an album cover</string>
    <string name="artist_photo">an artist photo</string>
    <string name="choose_song">Choose a song</string>
    <string name="choose_artist">Choose an artist</string>
    <string name="choose_album">Choose an album</string>
    <string name="music_playing">Playing: <xliff:g example="Tool" id="clickedItem">%s</xliff:g></string>
    <string name="music_paused">Paused: <xliff:g example="Tool band" id="clickedItem">%s</xliff:g></string>
    <string name="random_song">random song</string>
    <string name="repeat_button">repeat_button</string>
    <string name="backward_arrow">backward arrow</string>
    <string name="forward_arrow">forward arrow</string>
    <string name="shuffle_button">shuffle button</string>
    <string name="repeat_song">Songs will be repeated.</string>
    <string name="not_repeat_song">You won\'t hear the same song twice.</string>
    <string name="songs_alphabetically">Songs sorted alphabetically.</string>
    <string name="songs_randomly">Songs will be played randomly.</string>
    <string name="cannot_shuffle">You cannot shuffle one song.</string>
    <string name="tool">Tool</string>
    <string name="ten_thousands">10,000 Days</string>
    <string name="leningrad">Leningrad</string>
    <string name="dlya_millionov">Dlya millionov</string>
    <string name="piraty_xxi_veka">Piraty XXI veka</string>
    <string name="kult">Kult</string>
    <string name="ostateczny_krach">Ostateczny krach systemu korporacji</string>
    <string name="rammstein">Rammstein</string>
    <string name="herzeleid">Herzeleid</string>
    <string name="vicarious">Vicarious</string>
    <string name="jambi">Jambi</string>
    <string name="wings_for_marie">Wings for Marie (Pt 1)</string>
    <string name="ten_thousands_wings">10,000 Days (Wings Pt 2)</string>
    <string name="the_pot">The Pot</string>
    <string name="lipan_conjuring">Lipan Conjuring</string>
    <string name="lost_keys">Lost Keys (Blame Hofmann)</string>
    <string name="rosetta_stoned">Rosetta Stoned</string>
    <string name="intension">Intension</string>
    <string name="right_in_two">Right in Two</string>
    <string name="viginti_tres">Viginti Tres</string>
    <string name="menya_zovut_shnur">Menya zovut Shnur</string>
    <string name="may">May</string>
    <string name="khuynya">Khuynya</string>
    <string name="menedzher">Menedzher</string>
    <string name="razpizdyay">Razpizdyay</string>
    <string name="k_tebe_begu">K tebe begu</string>
    <string name="zina">Zina</string>
    <string name="khuyamba">Khuyamba</string>
    <string name="papa_byl_prav">Papa byl prav</string>
    <string name="www">WWW</string>
    <string name="u_menya_est_vsyo">U menya est vsyo</string>
    <string name="novy_god">Novy god</string>
    <string name="banany">Banany</string>
    <string name="bez_tebya">Bez tebya</string>
    <string name="goopya_peezda">Goopya peezda</string>
    <string name="panie_waldku">Panie Waldku, pan się nie boi, czyli Lewy czerwcowy</string>
    <string name="gdy_nie_ma_dzieci">Gdy nie ma dzieci</string>
    <string name="dziewczyna_bez_zeba">Dziewczyna bez zęba na przedzie</string>
    <string name="komu_bije_dzwon">Komu bije dzwon</string>
    <string name="du_riechst_so_gut">Du riechst so gut</string>
</resources>
