<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_image"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/pause_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/large_margin"
                android:contentDescription="@string/play_icon"
                android:src="@drawable/button_play_purple" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/standard_padding">

                <ImageButton
                    android:id="@+id/backward_button"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="@dimen/small_padding"
                    android:layout_marginBottom="@dimen/small_padding"
                    android:layout_marginEnd="@dimen/bigger_padding"
                    android:contentDescription="@string/backward_arrow"
                    android:src="@drawable/backward_grey"
                    android:background="transparent"/>

                <ImageView
                    android:id="@+id/repeat_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_margin="@dimen/small_padding"
                    android:contentDescription="@string/repeat_button"
                    android:src="@drawable/repeat_grey" />

                <ImageView
                    android:id="@+id/shuffle_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_margin="@dimen/small_padding"
                    android:contentDescription="@string/shuffle_button"
                    android:src="@drawable/shuffle_grey" />

                <ImageButton
                    android:id="@+id/forward_button"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="@dimen/small_padding"
                    android:layout_marginBottom="@dimen/small_padding"
                    android:layout_marginStart="@dimen/bigger_padding"
                    android:contentDescription="@string/forward_arrow"
                    android:src="@drawable/forward_grey"
                    android:background="transparent"/>
            </LinearLayout>
        </LinearLayout>

        <include
            android:id="@+id/include"
            layout="@layout/music_list" />
    </LinearLayout>
</layout>